crates/rupu-app-canvas/tests/it/snapshots/it__git_graph_snapshots__linear_3_steps.snap
---
source: crates/rupu-app-canvas/tests/it/git_graph_snapshots.rs
expression: rows
---
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: classify
    - Space: 2
    - Meta: classifier
  anchor:
    - classify
    - waiting
- cells:
    - Pipe: waiting
  anchor: ~
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: review
    - Space: 2
    - Meta: reviewer
  anchor:
    - review
    - waiting
- cells:
    - Pipe: waiting
  anchor: ~
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: publish
    - Space: 2
    - Meta: publisher
  anchor:
    - publish
    - waiting
