crates/rupu-app-canvas/tests/it/snapshots/it__git_graph_snapshots__panel_with_3_panelists.snap
---
source: crates/rupu-app-canvas/tests/it/git_graph_snapshots.rs
expression: rows
---
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: classify
    - Space: 2
    - Meta: classifier
  anchor:
    - classify
    - waiting
- cells:
    - Pipe: waiting
  anchor: ~
- cells:
    - Branch:
        - Mid
        - waiting
    - Branch:
        - Top
        - waiting
    - Space: 1
    - Label: review_panel
    - Space: 2
    - Meta: panel · 3 panelists
  anchor:
    - review_panel
    - waiting
- cells:
    - Pipe: waiting
    - Space: 1
    - Pipe: waiting
  anchor: ~
- cells:
    - Pipe: waiting
    - Space: 1
    - Bullet: waiting
    - Branch:
        - Mid
        - waiting
    - Space: 1
    - Label: security-reviewer
  anchor:
    - security-reviewer
    - waiting
- cells:
    - Pipe: waiting
    - Space: 1
    - Bullet: waiting
    - Branch:
        - Mid
        - waiting
    - Space: 1
    - Label: perf-reviewer
  anchor:
    - perf-reviewer
    - waiting
- cells:
    - Pipe: waiting
    - Space: 1
    - Bullet: waiting
    - Branch:
        - Mid
        - waiting
    - Space: 1
    - Label: style-reviewer
  anchor:
    - style-reviewer
    - waiting
- cells:
    - Pipe: waiting
    - Space: 1
    - Pipe: waiting
  anchor: ~
- cells:
    - Pipe: waiting
    - Space: 1
    - Branch:
        - Merge
        - waiting
    - Branch:
        - Bot
        - waiting
  anchor: ~
- cells:
    - Pipe: waiting
  anchor: ~
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: aggregate
    - Space: 2
    - Meta: findings-aggregator
  anchor:
    - aggregate
    - waiting
