crates/rupu-app-canvas/tests/it/snapshots/it__git_graph_snapshots__single_linear_step.snap
---
source: crates/rupu-app-canvas/tests/it/git_graph_snapshots.rs
expression: rows
---
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: hello
    - Space: 2
    - Meta: greeter
  anchor:
    - hello
    - waiting
