crates/rupu-app-canvas/tests/it/snapshots/it__git_graph_snapshots__standalone_approval_gate_with_auto_approve.snap
---
source: crates/rupu-app-canvas/tests/it/git_graph_snapshots.rs
expression: rows
---
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: classify
    - Space: 2
    - Meta: classifier
  anchor:
    - classify
    - waiting
- cells:
    - Pipe: waiting
  anchor: ~
- cells:
    - Bullet: waiting
    - Space: 2
    - Label: ship_gate
    - Space: 2
    - Meta: gate · auto
  anchor:
    - ship_gate
    - waiting
